Cnapdev 4505 sonarqube and trufflehug